@@ -175,6 +175,7 @@ class Budget {
 		void loadCurrenciesFile(QString filename, bool is_local);
 		QString loadECBData(QByteArray data);
 		QString loadExchangerateHostData(QByteArray data);
+		QString loadFloatratesComData(QByteArray data);
 		QString loadMyCurrencyNetData(QByteArray data);
 		QString loadMyCurrencyNetHtml(QByteArray data);
 		QString saveCurrencies();
