@@ -38,7 +38,8 @@ typedef enum {
 	EXCHANGE_RATE_SOURCE_NONE,
 	EXCHANGE_RATE_SOURCE_ECB,
 	EXCHANGE_RATE_SOURCE_MYCURRENCY_NET,
-	EXCHANGE_RATE_SOURCE_EXCHANGERATE_HOST
+	EXCHANGE_RATE_SOURCE_EXCHANGERATE_HOST,
+	EXCHANGE_RATE_SOURCE_FLOATRATES_COM
 } ExchangeRateSource;
 
 class Currency {
