@@ -1,3 +1,7 @@
+2023-11-28  Hanna Knutsson <hanna.knutsson@protonmail.com>
+
+	* Replace defunct exchange rates sources
+
 2023-07-06  Hanna Knutsson <hanna.knutsson@protonmail.com>
 
 	* Add option to reset column widths
